# python-flask-docker

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  seed  test_json  test_json1  test_json2
backend/: Dockerfile  test_json3  test_json4
backend/src/: app.py  test_app.py
backend/src/static/: nostr.js
backend/src/templates/: error.html  index.html
frontend/: Dockerfile  pyproject.toml  requirements.txt
frontend/src/: __init__.py  app.py  database.py  jokes.csv  main.py  models.py
frontend/src/static/: nostr.js
frontend/src/templates/: base.html  index.html  profile.html
src/: app.py  test_app.py
src/templates/: index.html
